# conjure-oxide

./: .editorconfig  .gitignore  .gitmodules  .package.json.depr  .vale.ini  2  404.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  Makefile 3  README.md  ToDo.md  a.txt  bool1.essence  build.rs  build.sh  clean.sh  clippy.toml  contributors.html  enums.essence  ex.essence  failing.sh  fix-parser-segfault.patch  foo.bar  hello.rules  index.html  input.essence  input2.essence  input3.essence  input4.essence  int-eq.essence  interested-students.html  links.html  meow-holes.essence  meow.essence  my_params_bad.essence  my_params_missing.essence  (+32 more)
conjure_oxide/: Cargo.toml  build.rs  generate_custom.rs
conjure_oxide/examples/: solver-hello-minion.rs  tree-sitter-haskell-expr.rs  uni.rs
conjure_oxide/src/: ast.rs  cli.rs  defaults.rs  error.rs  find_conjure.rs  generate_custom.rs  help_text.txt  lib.rs  main.rs  parse.rs  print_info_schema.rs  protrace 5.json  protrace.json  rewrite.rs  rule_engine.rs  solve 2.rs  solve.rs  test_solve.rs
conjure_oxide/src/rule_engine/: mod.rs  resolve_rules.rs  rewrite.rs
conjure_oxide/src/rules/: base.rs  bubble.rs  cnf.rs  constant.rs  minion.rs  mod.rs  test.rs
conjure_oxide/src/solver/: mod.rs  model_modifier.rs  states.rs  stats.rs
conjure_oxide/src/solvers/: error.rs  kissat.rs  minion.rs  mod.rs  solvers.rs
conjure_oxide/src/unstable/: mod.rs
conjure_oxide/src/utils/: conjure.rs  essence_parser.rs  json.rs  misc.rs  mod.rs  testing.rs
conjure_oxide/tests/: cpu_time_tests.rs  custom_tests.rs  gen_test_template  generated_tests.rs  integration_tests.rs  macro_tests.rs  mod.rs  model_tests.rs  rewrite_tests.rs
conjure_oxide/tests/essence_macro_tests/: mod.rs
conjure_oxide/tests/parser_tests/: mod.rs
conjure_oxide/tests/solver_adaptor_tests/: mod.rs  sat.rs
crates/conjure-cp/: Cargo.toml  README.md
crates/conjure-cp-bench/: Cargo.toml
crates/conjure-cp-bench/examples/: conjure_solve_time.rs
crates/conjure-cp-bench/src/: executor.rs  lib.rs  mode.rs  model_sources.rs
crates/conjure-cp-cli/: Cargo.toml  README.md
crates/conjure-cp-cli/src/: cli.rs  find_conjure.rs  instantiate.rs  lib.rs  main.rs  parse_test.rs  pretty.rs  print_info_schema.rs  rule_trace_aggregates.rs  solve.rs  test_solve.rs
crates/conjure-cp-core/: Cargo.toml  README.md  build.rs
crates/conjure-cp-core/src/: bug.rs  context.rs  instantiate.rs  lib.rs  objective.rs  representation.rs.disabled  settings.rs  utils.rs
crates/conjure-cp-core/tests/: rustsat_solve_mut_add_constraint.rs  z3_solve_mut_add_constraint.rs
crates/conjure-cp-enum-compatibility-macro/: Cargo.toml  README.md
crates/conjure-cp-enum-compatibility-macro/src/: lib.rs
crates/conjure-cp-essence-macros/: Cargo.toml  README.md  build.rs
crates/conjure-cp-essence-macros/src/: expand.rs  expression.rs  lib.rs
crates/conjure-cp-essence-parser/: Cargo.toml  README.md
crates/conjure-cp-essence-parser/src/: errors.rs  lib.rs  lsp_api.rs  parser_legacy.rs
crates/conjure-cp-essence-parser/tests/: keyword_as_ident.rs  keyword_as_var.rs  malformed_statements.rs  malformed_top_level.rs  missing_token.rs  parse_objective_files.rs  semantic_test.rs  unexpected_token.rs
crates/conjure-cp-fuzz/: .gitignore  Cargo.toml  README.md  essence.dict  run.sh
crates/conjure-cp-fuzz/seeds/: matrix_eq_nested.essence  matrix_slice.essence  nqueens.essence  pythagorean.essence
crates/conjure-cp-fuzz/seeds_minimized/: matrix_idx_expr.essence  matrix_lex.essence
crates/conjure-cp-fuzz/src/: main.rs
crates/conjure-cp-lsp/: Cargo.toml  README.md
crates/conjure-cp-lsp/src/: lib.rs  server.rs
crates/conjure-cp-rules/: Cargo.toml  README.md  build.rs
crates/conjure-cp-rules/src/: base.rs  bottom_up_adaptor.rs  bubble.rs  cnf.rs  cnf_int.rs  comprehensions.rs  constant_eval.rs  expand_comprehension.rs  lex.rs  lib.rs  minion.rs  tuple.rs  (+9 more)
crates/conjure_core/: Cargo.toml  README.md  build.rs
crates/conjure_essence_macros/: Cargo.toml
crates/conjure_macros/: Cargo.toml  grammar.js
crates/conjure_rules/: Cargo.toml
crates/derive_to_tokens/: Cargo.toml
crates/doc_solver_support/: Cargo.toml
crates/enum_compatability_macro/: Cargo.toml
crates/essence_macros/: Cargo.toml
crates/language-server/: Cargo.toml
crates/minion-sys/: Cargo.toml  README.md  build.rs  build.sh
crates/tree-morph/: Cargo.toml  README.md
crates/tree-sitter-essence/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.essence  test.txt  test_code.essence  tree-sitter.json
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: error_detector.rs  fuzz_detect_errors.rs
fuzz/seeds/: agnostic-valid-legacy.generated-essence.essence  divide-mod-novar.essence  missing-token-02-native.generated-essence.essence  missing-token-06-native.generated-essence.essence  type-mismatch-native.generated-essence.essence  unexpected-token-01-native.generated-essence.essence  unsafe-division-native.generated-essence.essence  xkcd.essence
test-suite/: Cargo.toml  README.md  build.rs
test-suite/src/: accept.rs  diagnostics.rs  golden_files.rs  lib.rs  test_config.rs  text_files.rs
test-suite/tests/: custom_tests.rs  integration_test_template  integration_tests.rs  roundtrip_tests.rs
tests-integration/: Cargo.toml  README.md  build.rs  old_build  tests_that_need_representations.txt
tests-integration/src/: golden_files.rs  lib.rs  roundtrip_tests.rs  test.rs  test_config.rs  testconf.toml
tests-integration/tests/: custom_test_template  custom_tests.rs  domain_tightening_tests.rs  feature_AST_test_template  feature_AST_tests.rs  integration_test_template  integration_tests.rs  list_features_test.rs  parser_test.rs  roundtrip_test_template  roundtrip_tests.rs
tree-sitter-essence/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test_code.essence  tree-sitter.json
tree-sitter-essence/src/: grammar.json  node-types.json  parser.c
(+43790 files in other folders)
