[workspace]
resolver = "2"

default-members = ["crates/conjure-cp", "tests-integration", "crates/conjure-cp-cli"]

members = [
    "crates/conjure-cp-cli",
    "crates/conjure-cp", 
    "crates/conjure-cp-core",
    "crates/conjure-cp-rules",
    "crates/conjure-cp-essence-parser",
    "crates/conjure-cp-essence-macros",
    "crates/conjure-cp-enum-compatibility-macro",
    "crates/conjure-cp-rule-macros",
    "crates/minion-sys",
    "crates/tree-sitter-essence",
    "crates/tree-morph", 

  # internal crates, not to be pushed to crates io
  "tests-integration"
]

[workspace.lints.clippy]
unwrap_used = "allow"
expect_used = "allow"


assigning_clones = "warn"         # use clone_from where possible
cloned_instead_of_copied = "warn" # use copy instead of clone where possible
collection_is_never_read = "warn"
enum_glob_use = "warn"            # do not allow `use Enum::*`
implicit_clone = "warn"           # use .clone() instead of .to_owned()
redundant_clone = "warn"          # this is a nursery lint, so might give false-negatives.

[profile.profiling] 
inherits = "release"
debug = true
