[package]
name = "conjure_oxide"
version = "0.0.1"
edition = "2024"
default-run = "conjure_oxide"

# these are available inside build.rs
[build-dependencies]
walkdir = "2.5.0"

[dependencies]
conjure_core = { path = "../crates/conjure_core" }
conjure_rules = { path = "../crates/conjure_rules" }
minion_rs = { path = "../solvers/minion" }
conjure_essence_parser = { path = "../crates/conjure_essence_parser" }
conjure_essence_macros = { path = "../crates/conjure_essence_macros" }


uniplate = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
strum_macros = "0.27.2"
strum = "0.27.2"
versions = "7.0.0"
linkme = "0.3.33"
walkdir = "2.5.0"
regex = "1.11.1"
log = "0.4.27"
env_logger = "0.11.8"
structured-logger = "1.0.4"
schemars = "1.0.4"
toml = "0.9.2"
glob = "0.3.2"
rand = "0.9.2"
tracing-appender = "0.2"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "env-filter",
    "json",
] }
tracing = "0.1.41"
tree-sitter = "0.24.7"
tree-sitter-essence = { version = "0.1.0", path = "../crates/tree-sitter-essence" }
tree-morph = { path = "../crates/tree_morph" }
tree-sitter-haskell = "0.23.0"
git-version = "0.3.9"
project-root = "0.2.2"
tempfile = "3.20.0"
itertools = "0.14.0"
clap_complete = "4.5.55"
rayon = "1.8.0"

[features]

default = ["extra-rule-checks"]
extra-rule-checks = ["conjure_core/extra-rule-checks"]
unstable = []
unstable-solver-interface = ["unstable"]

[lints]
workspace = true

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
