[package]
name = "conjure_oxide"
version = "0.0.1"
edition = "2024"
default-run = "conjure_oxide"

# these are available inside build.rs
[build-dependencies]
walkdir = "2.5.0"

[dependencies]
conjure_core = { path = "../crates/conjure_core" }
conjure_rules = { path = "../crates/conjure_rules" }
conjure_essence_parser = { path = "../crates/conjure_essence_parser" }
conjure_essence_macros = { path = "../crates/conjure_essence_macros" }


uniplate = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
versions = "7.0.0"
walkdir = "2.5.0"
schemars = "1.0.4"
toml = "0.9.5"
glob = "0.3.2"
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "env-filter",
    "json",
] }
tracing = "0.1.41"
tree-morph = { path = "../crates/tree-morph" }
git-version = "0.3.9"
project-root = "0.2.2"
tempfile = "3.20.0"
itertools = "0.14.0"
clap_complete = "4.5.55"
rayon = "1.8.0"

[features]

default = ["extra-rule-checks"]
extra-rule-checks = ["conjure_core/extra-rule-checks"]
unstable = []
unstable-solver-interface = ["unstable"]

[lints]
workspace = true

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
tree-sitter = "0.25.8"
tree-sitter-haskell = "0.23.0"
