[package]
name = "conjure_oxide"
version = "0.0.1"
edition = "2024"
default-run = "conjure_oxide"

# these are available inside build.rs
[build-dependencies]
walkdir = "2.5.0"

[dependencies]
conjure-cp-core = { path = "../crates/conjure-cp-core" }
conjure-cp-rules = { path = "../crates/conjure-cp-rules" }
conjure-cp-essence-parser = { path = "../crates/conjure-cp-essence-parser" }
conjure-cp-essence-macros = { path = "../crates/conjure-cp-essence-macros" }


uniplate = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
versions = "7.0.0"
walkdir = "2.5.0"
schemars = "1.0.4"
toml = "0.9.5"
glob = "0.3.3"
tracing-subscriber = { version = "0.3.20", features = [
    "ansi",
    "env-filter",
    "json",
] }
tracing = "0.1.41"
tree-morph = { path = "../crates/tree-morph" }
git-version = "0.3.9"
project-root = "0.2.2"
tempfile = "3.21.0"
itertools = "0.14.0"
clap_complete = "4.5.57"
rayon = "1.11.0"

[features]

default = ["extra-rule-checks"]
extra-rule-checks = ["conjure-cp-core/extra-rule-checks"]
unstable = []
unstable-solver-interface = ["unstable"]

[lints]
workspace = true

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
tree-sitter = "0.25.9"
tree-sitter-haskell = "0.23.0"
