[package]
name = "conjure-cp-cli-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.conjure-cp-essence-parser]
path = "../crates/conjure-cp-essence-parser"
default-features = false

[[bin]]
name = "detect_errors"
path = "fuzz_targets/fuzz_detect_errors.rs"
test = false
doc = false
bench = false
