[package]
name = "test-suite"
version = "0.1.0"
edition = "2024"

[features]
default = []
z3-bundled = ["conjure-cp/z3-bundled", "conjure-cp-cli/z3-bundled"]
extra-rule-checks = [
    "conjure-cp/extra-rule-checks",
    "conjure-cp-cli/extra-rule-checks",
]

[lints]
workspace = true

[dependencies]
conjure-cp = { path = "../crates/conjure-cp", default-features = false }

serde = { version = "1.0.228", features = ["derive"] }
toml_edit = "0.25"

[build-dependencies]
conjure-cp = { path = "../crates/conjure-cp", default-features = false }

serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
toml_edit = "0.25"
walkdir = "2.5.0"

[dev-dependencies]
conjure-cp-rules = { path = "../crates/conjure-cp-rules" }
# disable default features because when building tests the "smt"/"extra-rule-checks"
# features are controlled by this crate instead
conjure-cp-cli = { path = "../crates/conjure-cp-cli", default-features = false }

git-version = "0.3.9"
pretty_assertions = "1.4.1"
serde = "1.0.228"
serde_json = "1.0.150"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
