[package]
name = "tests-integration"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[build-dependencies]
walkdir = "2.5.0"

[dev-dependencies]
conjure-cp = { path = "../crates/conjure-cp" }
conjure-cp-rules = { path = "../crates/conjure-cp-rules" }
conjure-cp-cli = { path = "../crates/conjure-cp-cli" }
git-version = "0.3.9"
glob = "0.3.3"
itertools = "0.14.0"
pretty_assertions = "1.4.1"
serde = "1.0.228"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tree-morph = { path = "../crates/tree-morph" }
uniplate = "0.4.4"
