[package]
name = "tests-integration"
version = "0.1.0"
edition = "2024"

[features]
default = ["smt"]
smt = ["conjure-cp/smt", "conjure-cp-cli/smt"]
extra-rule-checks = [
    "conjure-cp/extra-rule-checks",
    "conjure-cp-cli/extra-rule-checks",
]

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
conjure-cp = { path = "../crates/conjure-cp", default-features = false }

[build-dependencies]
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
conjure-cp = { path = "../crates/conjure-cp", default-features = false }
toml = "1.0.3"

[dev-dependencies]
conjure-cp-rules = { path = "../crates/conjure-cp-rules" }
# disable default features because when building tests the "smt"/"extra-rule-checks"
# features are controlled by this crate instead
conjure-cp-cli = { path = "../crates/conjure-cp-cli", default-features = false }
git-version = "0.3.9"
glob = "0.3.3"
itertools = "0.14.0"
pretty_assertions = "1.4.1"
serde = "1.0.228"
serde_json = "1.0.145"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tree-morph = { path = "../crates/tree-morph" }
uniplate = "0.4.4"
