[package]
name = "tree-sitter-essence-tester"
description = "A very simple parser for Essence arithmatic expressions"
version = "0.1.0"
authors = ["Leia McAlister-Young <l.mcalisteryoung@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "essence-tester"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-essence_tester"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
