[package]
name = "conjure-cp-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
conjure-cp = { version = "0.1.0", path = "../conjure-cp" }
derivative.workspace = true
glob.workspace = true
serde_json.workspace = true
thiserror.workspace = true
versions.workspace = true
walkdir.workspace = true

[lints]
workspace = true


[[example]]
name = "conjure_solve_time"

[dev-dependencies]
clap.workspace = true
