[package]
name = "conjure-cp-cli"
version = "0.0.1"
edition = "2024"
default-run = "conjure-oxide"


[[bin]]
name = 'conjure-oxide'
path = "src/main.rs"

[dependencies]
conjure-cp = { path = "../conjure-cp" }
conjure-cp-rules = { path = "../conjure-cp-rules" }


uniplate = "0.4.2"
serde_json = "1.0.143"
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
versions = "7.0.0"
schemars = "1.0.4"
glob = "0.3.3"
tracing-subscriber = { version = "0.3.20", features = [
    "ansi",
    "env-filter",
    "json",
] }
tracing = "0.1.41"
git-version = "0.3.9"
tempfile = "3.21.0"
itertools = "0.14.0"
clap_complete = "4.5.57"
rayon = "1.11.0"

[features]

default = ["extra-rule-checks"]
extra-rule-checks = ["conjure-cp/extra-rule-checks"]

[lints]
workspace = true

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
tree-sitter = "0.25.9"
tree-sitter-haskell = "0.23.0"
