[package]
name = "conjure-cp-cli"
version = "0.0.1"
edition = "2024"
default-run = "conjure-oxide"

[[bin]]
name = 'conjure-oxide'
path = "src/main.rs"

[dependencies]
conjure-cp = { path = "../conjure-cp" }
conjure-cp-rules = { path = "../conjure-cp-rules" }
conjure-cp-lsp = { path = "../conjure-cp-lsp" }

anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
git-version = { workspace = true }
glob = { workspace = true }
humantime = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uniplate = { workspace = true }
versions = { workspace = true }

[features]

default = ["extra-rule-checks"]
extra-rule-checks = ["conjure-cp/extra-rule-checks"]
z3-bundled = ["conjure-cp/z3-bundled", "conjure-cp-rules/z3-bundled", "conjure-cp-lsp/z3-bundled"]

[lints]
workspace = true
