[package]
name = "conjure-cp-core"
version = "0.0.1"
edition = "2024"

[features]
default = []
z3-bundled = ["z3/bundled"]
extra-rule-checks = []

[dependencies]
anyhow = { workspace = true }
bimap = { workspace = true }
clap = { workspace = true }
conjure-cp-enum-compatibility-macro = { path = "../conjure-cp-enum-compatibility-macro" }
conjure-cp-rule-macros = { path = "../conjure-cp-rule-macros" }
dashmap = { workspace = true }
defile = { workspace = true }
derivative = { workspace = true }
educe = { workspace = true }
elsa = { workspace = true }
funcmap = { workspace = true }
git-version = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
linkme = { workspace = true }
log = { workspace = true }
minion-sys = { path = "../minion-sys" }
num-traits = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
polyquine = { workspace = true }
proc-macro2 = { workspace = true }
project-root = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
rustsat = { workspace = true }
rustsat-minisat = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tree-morph = { path = "../tree-morph" }
uniplate = { workspace = true }
ustr = { workspace = true }
versions = { workspace = true }
walkdir = { workspace = true }
z3 = { version = "0.19.9", default-features = false }

[dev-dependencies]
conjure-cp = { path = "../conjure-cp" }

[lints]
workspace = true
