[package]
name = "conjure-cp-essence-macros"
version = "0.1.0"
edition = "2024"

[features]
default = []
z3-bundled = ["conjure-cp-essence-parser/z3-bundled"]

[lib]
proc-macro = true

[dependencies]
conjure-cp-essence-parser = { path = "../conjure-cp-essence-parser" }

tree-sitter = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
polyquine = { workspace = true }

[dev-dependencies]
conjure-cp = { path = "../conjure-cp" }

[lints]
workspace = true
