[package]
name = "conjure-cp-essence-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
conjure-cp-core = { path = "../conjure-cp-core" }
tree-sitter-essence = { path = "../tree-sitter-essence" }

uniplate = {workspace = true}
tree-sitter = {workspace = true}
thiserror = {workspace = true}
serde_json = {workspace = true}
ustr = {workspace = true}

[lints]
workspace = true
