[package]
name = "conjure-cp-essence-parser"
version = "0.1.0"
edition = "2024"

[features]
default = []
z3-bundled = ["conjure-cp-core/z3-bundled"]

[dependencies]
conjure-cp-core = { path = "../conjure-cp-core" }
tree-sitter-essence = { path = "../tree-sitter-essence" }

capitalize = "0.3"
defile = { workspace = true }
rangemap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
uniplate = { workspace = true }
ustr = { workspace = true }

[lints]
workspace = true
