[package]
name = "conjure-cp-essence-parser"
version = "0.1.0"
edition = "2024"

[features]
default = []
z3-bundled = ["conjure-cp-core/z3-bundled"]

[dependencies]
conjure-cp-core = { path = "../conjure-cp-core" }
tree-sitter-essence = { path = "../tree-sitter-essence" }

uniplate = { workspace = true }
tree-sitter = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
ustr = { workspace = true }
defile = { workspace = true }
serde = { workspace = true }
capitalize = "0.3"
rangemap = { workspace = true }

[lints]
workspace = true
