[package]
name = "conjure-cp-fuzz"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "conjure-fuzz-harness"
path = "src/main.rs"

[dependencies]
conjure-cp = { path = "../conjure-cp" }
conjure-cp-cli = { path = "../conjure-cp-cli" }
conjure-cp-rules = { path = "../conjure-cp-rules" }

afl = "0.15"

[lints]
workspace = true

