[package]
name = "conjure-cp-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tower-lsp = "0.20.0"
conjure-cp-essence-parser = { path = "../conjure-cp-essence-parser" }
conjure-cp-core  ={ path = "../conjure-cp-core" }
tree-sitter = { workspace = true }
moka = { version = "0.12.13", features = ["future"] }