[package]
name = "conjure-cp-lsp"
version = "0.1.0"
edition = "2024"

[features]
default = []
z3-bundled = ["conjure-cp-essence-parser/z3-bundled"]

[dependencies]
tokio = { version = "1.51.1", features = ["full"] }
tower-lsp = "0.20.0"
conjure-cp-essence-parser = { path = "../conjure-cp-essence-parser" }
tree-sitter-essence = { path = "../tree-sitter-essence" }
conjure-cp-core  ={ path = "../conjure-cp-core" }
tree-sitter = { workspace = true }
moka = { version = "0.12.13", features = ["future"] }