[package]
name = "conjure-cp-lsp"
version = "0.1.0"
edition = "2024"

[features]
default = []
z3-bundled = ["conjure-cp-essence-parser/z3-bundled"]

[dependencies]
conjure-cp-core  ={ path = "../conjure-cp-core" }
conjure-cp-essence-parser = { path = "../conjure-cp-essence-parser" }
tree-sitter-essence = { path = "../tree-sitter-essence" }

moka = { version = "0.12.13", features = ["future"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = { workspace = true }
