[package]
name = "conjure-cp-rules"
version = "0.1.0"
edition = "2024"

[features]
extra-rule-checks = []

[dependencies]
conjure-cp = { path = "../conjure-cp" }

uniplate = {workspace = true}
linkme = {workspace = true}
itertools = {workspace = true}
tracing = {workspace = true}
git-version = {workspace = true}
paste = {workspace = true}

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["paste", "git-version"]
