[package]
name = "conjure-cp-rules"
version = "0.1.0"
edition = "2024"

[features]
default = []
z3-bundled = ["conjure-cp/z3-bundled"]
extra-rule-checks = []

[dependencies]
conjure-cp = { path = "../conjure-cp" }

bimap = {workspace = true}
defile = {workspace = true}
git-version = { workspace = true }
itertools = { workspace = true }
linkme = { workspace = true }
parking_lot = {workspace = true}
paste = { workspace = true }
thiserror = { workspace = true}
tracing = { workspace = true }
uniplate = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["paste", "git-version"]
