[package]
name = "conjure-cp"
version = "0.1.0"
edition = "2024"

[dependencies]
conjure-cp-core = { version = "0.0.1", path = "../conjure-cp-core" }
conjure-cp-essence-macros = { version = "0.1.0", path = "../conjure-cp-essence-macros" }
conjure-cp-essence-parser = { version = "0.1.0", path = "../conjure-cp-essence-parser" }

[features]

extra-rule-checks = ["conjure-cp-core/extra-rule-checks"]

[lints]
workspace = true

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"
tree-sitter = "0.25.8"
tree-sitter-haskell = "0.23.0"
uniplate = "0.4.2"
serde_json = "1.0.142"
conjure-cp-rules = { path = '../conjure-cp-rules'}
