[package]
name = "conjure-cp"
version = "0.1.0"
edition = "2024"

[dependencies]
conjure-cp-core = { version = "0.0.1", path = "../conjure-cp-core" }
conjure-cp-essence-macros = { version = "0.1.0", path = "../conjure-cp-essence-macros" }
conjure-cp-essence-parser = { version = "0.1.0", path = "../conjure-cp-essence-parser" }

[features]

extra-rule-checks = ["conjure-cp-core/extra-rule-checks"]

[lints]
workspace = true

[dev-dependencies]
conjure-cp-rules = { path = '../conjure-cp-rules'}

itertools = {workspace = true}
pretty_assertions = {workspace = true}
tree-sitter = {workspace = true}
tree-sitter-haskell = {workspace = true}
trybuild = {workspace = true}
uniplate = {workspace = true}
serde_json = {workspace = true}
