[package]
name = "conjure_core"
version = "0.0.1"
edition = "2021"

[features]
extra-rule-checks = []

[dependencies]
conjure_macros = { path = "../conjure_macros" }
enum_compatability_macro = { path = "../enum_compatability_macro" }
minion_rs = { path = "../../solvers/minion" }

uniplate = "0.1.5"
project-root = "0.2.2"
linkme = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_with = "3.12.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.9"
log = "0.4.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0.95"
regex = "1.11.1"
walkdir = "2.5.0"
derivative = "2.2.0"
schemars = "0.8.21"
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.13.0"
im = "15.1.0"

[lints]
workspace = true
