[package]
name = "conjure_core"
version = "0.0.1"
edition = "2021"

[features]
extra-rule-checks = []

[dependencies]
conjure_rule_macros = { path = "../conjure_rule_macros" }
enum_compatability_macro = { path = "../enum_compatability_macro" }
minion_rs = { path = "../../solvers/minion" }

uniplate = "0.2.3"
project-root = "0.2.2"
linkme = "0.3.33"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
log = "0.4.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0.98"
regex = "1.11.1"
walkdir = "2.5.0"
derivative = "2.2.0"
schemars = "0.9.0"
clap = { version = "4.5.39", features = ["derive"] }
itertools = "0.14.0"
im = "15.1.0"
git-version = "0.3.9"
rustsat-minisat = "0.7.1"
rustsat = "0.7.2"
tree-morph = { path = "../tree_morph" }
paste = "1.0.15"

[dev-dependencies]
conjure_essence_macros = { path = "../conjure_essence_macros" }

[lints]
workspace = true
