[package]
name = "conjure_essence_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
conjure_core = { path = "../conjure_core" }
conjure_essence_parser = { path = "../conjure_essence_parser" }

tree-sitter = "0.24.7"
uniplate = "0.2.3"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
proc-macro2 = "1.0.95"

[lints]
workspace = true
