[package]
name = "conjure_essence_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
conjure-cp-core = { path = "../conjure-cp-core" }
conjure-cp-essence-parser = { path = "../conjure-cp-essence-parser" }

tree-sitter = "0.25.8"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
proc-macro2 = "1.0.95"

[lints]
workspace = true
