[package]
name = "conjure_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }
conjure_core = {path="../conjure_core"}
inventory = "0.3.13"
proc-macro2 = "1.0.70"

[lints]
workspace = true
