[package]
name = "conjure_rules"
version = "0.1.0"
edition = "2024"

[features]
extra-rule-checks = []

[dependencies]
conjure_core = { path = "../conjure_core" }
conjure_rule_macros = { path = "../conjure_rule_macros" }
conjure_essence_macros = { path = "../conjure_essence_macros" }

uniplate = "0.2.2"
linkme = "0.3.33"
itertools = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
git-version = "0.3.9"
paste = "1.0.15"

[lints]
workspace = true
