[package]
name = "conjure_rules"
version = "0.1.0"
edition = "2024"

[features]
extra-rule-checks = []

[dependencies]
conjure-cp-core = { path = "../conjure-cp-core" }
conjure_rule_macros = { path = "../conjure_rule_macros" }
conjure_essence_macros = { path = "../conjure_essence_macros" }

uniplate = "0.4.2"
linkme = "0.3.33"
itertools = "0.14.0"
tracing = "0.1"
git-version = "0.3.9"
paste = "1.0.15"

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["paste","git-version"]
