[package]
name = "derive_to_tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.100", features = ["parsing", "visit-mut", "full"] }
itertools = "0.14"
proc-macro2 = "1.0.94"
deluxe = "0.5.0"
log = "0.4.27"

[lints]
workspace = true
