[package]
name = "doc_solver_support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
quote = "1.0.34"
syn = { version = "2.0.48", features = ["parsing","visit-mut","full"] }
itertools = "0.12"

[lints]
workspace = true
