[package]
name = "enum_compatability_macro"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["parsing","visit-mut","full"] }
itertools = "0.14"

[lints]
workspace = true
