[package]
name = "essence_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
conjure_core = { path = "../conjure_core" }
conjure_essence_parser = { path = "../conjure_essence_parser" }
uniplate = "0.2.2"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
proc-macro2 = "1.0.94"

[lints]
workspace = true
